Contact Icons Placed to the Right

--- a/index.html
+++ b/index.html
@@ -18,23 +18,20 @@
         <div class="gradient-box-top"></div>
         <header>
             <h1>VASILIY GLADUSH</h1>
-            <h3>JUNIOR SOFTWARE ENGINEER</h3>
+            <h3>SOFTWARE DEVELOPER</h3>
         </header>
         <section class="content">
-            <div class="left-side">
+            <section class="left-side">
                 <div class="vertical-line"></div>
                 <section class="contact-section">
                     <div class="section-name">
                         <p>CONTACT</p>
                     </div>
-                    <img class="contact_icon phone_icon" src="./imgs/phone_icon.png" alt="Phone Icon">
-                    <img class="contact_icon mail_icon" src="./imgs/mail_icon.png" alt="Mail Icon">
-                    <img class="contact_icon location_icon" src="./imgs/phone_icon.png" alt="Location Icon">
-                    <img class="contact_icon instagram_icon" src="./imgs/mail_icon.png" alt="Instagram Icon">
-                    <p><a href="tel: +380684834663">+38 068-483-46-63</a></p>
-                    <p><a href="mailto: vasylyi2004@gmail.com">vasylyi2004@gmail.com</a></p>
-                    <p>Martina-Shymanovskogo<br>Kryvyi Rih, Ukraine</p>
-                    <p><a href="https://www.instagram.com/vasyagladush/">@vasyagladush</a></p>
+                    <p class="phone-contact"><a href="tel: +380684834663" target="_blank">+38 068-483-46-63</a></p>
+                    <p class="mail-contact"><a href="mailto: vasylyi2004@gmail.com" target="_blank">vasylyi2004@gmail.com</a></p>
+                    <p class="location-contact"><a href="https://goo.gl/maps/DtZ7JXfggpDNZwX17" target="_blank">Martina-Shymanovskogo<br>Kryvyi
+                            Rih, Ukraine</a></p>
+                    <p class="instagram-contact"><a href="https://www.instagram.com/vasyagladush/" target="_blank">@vasyagladush</a></p>
                 </section>
                 <section>
                     <div class="section-name">
@@ -52,8 +49,8 @@
                     <p>Fast Learning</p>
                     <p>Working Independently</p>
                 </section>
-            </div>
-            <div class="right-side">
+            </section>
+            <section class="right-side">
                 <section>
                     <div class="section-name">
                         <p>PROFESSIONAL PROFILE</p>
@@ -70,7 +67,7 @@
                         labore vitae quam, sequi, doloribus quod deserunt velit natus itaque tempore accusantium
                         nesciunt asperiores tenetur libero? Repellat?</p>
                 </section>
-            </div>
+            </section>
         </section>
         <div class="gradient-box-end"></div>
     </main>
