Right Side Done

--- a/index.html
+++ b/index.html
@@ -15,33 +15,70 @@
 
 <body>
     <main>
+
         <div class="gradient-box-top"></div>
+
+        <!-- -- header -- -->
+
         <header>
             <h1>VASILIY GLADUSH</h1>
             <h3>SOFTWARE DEVELOPER</h3>
         </header>
+
+        <!-- == header == -->
+
+        <!-- -- content -- -->
+
         <section class="content">
+
+            <!-- -- left side -- -->
+
             <section class="left-side">
+
                 <div class="vertical-line"></div>
+
+                <!-- -- contact section -- -->
+
                 <section class="contact-section">
                     <div class="section-name">
                         <p>CONTACT</p>
                     </div>
                     <p class="phone-contact"><a href="tel: +380684834663" target="_blank">+38 068-483-46-63</a></p>
-                    <p class="mail-contact"><a href="mailto: vasylyi2004@gmail.com" target="_blank">vasylyi2004@gmail.com</a></p>
-                    <p class="location-contact"><a href="https://goo.gl/maps/DtZ7JXfggpDNZwX17" target="_blank">Martina-Shymanovskogo<br>Kryvyi
+                    <p class="mail-contact"><a href="mailto: vasylyi2004@gmail.com"
+                            target="_blank">vasylyi2004@gmail.com</a></p>
+                    <p class="location-contact"><a href="https://goo.gl/maps/DtZ7JXfggpDNZwX17"
+                            target="_blank">Martina-Shymanovskogo<br>Kryvyi
                             Rih, Ukraine</a></p>
-                    <p class="instagram-contact"><a href="https://www.instagram.com/vasyagladush/" target="_blank">@vasyagladush</a></p>
+                    <p class="instagram-contact"><a href="https://www.instagram.com/vasyagladush/"
+                            target="_blank">@vasyagladush</a></p>
                 </section>
+
+                <!-- == contact section == -->
+
+                <!-- -- education section -- -->
+
                 <section>
                     <div class="section-name">
                         <p>EDUCATION</p>
                     </div>
-                    <h3>AUTOMATION AND COMPUTER-INTEGRATED TECHNOLOGIES</h3>
-                    <p>Kryvyi Rih National University</p>
-                    <p>Kriviy Rih, Ukraine</p>
-                    <p>since 2021</p>
+                    <section class="institution-block">
+                        <h3>COMPUTER SCIENCE</h3>
+                        <p>Kryvyi Rih National University</p>
+                        <p>Kriviy Rih, Ukraine</p>
+                        <p>since 2021</p>
+                    </section>
+                    <section class="institution-block">
+                        <h3>SOFTWARE ENGINEERING</h3>
+                        <p>Kryvyi Rih National University</p>
+                        <p>Kriviy Rih, Ukraine</p>
+                        <p>since 2021</p>
+                    </section>
                 </section>
+
+                <!-- == education section == -->
+
+                <!-- -- skills section -- -->
+
                 <section class="skills-section">
                     <div class="section-name">
                         <p>SKILLS</p>
@@ -49,8 +86,19 @@
                     <p>Fast Learning</p>
                     <p>Working Independently</p>
                 </section>
+
+                <!-- == skills section == -->
+
             </section>
+
+            <!-- == left side == -->
+
+            <!-- -- right side -- -->
+
             <section class="right-side">
+
+                <!-- -- professional profile section -- -->
+
                 <section>
                     <div class="section-name">
                         <p>PROFESSIONAL PROFILE</p>
@@ -59,17 +107,59 @@
                         labore vitae quam, sequi, doloribus quod deserunt velit natus itaque tempore accusantium
                         nesciunt asperiores tenetur libero? Repellat?</p>
                 </section>
+
+                <!-- == professional profile section == -->
+
+                <!-- -- work exprience section -- -->
+
                 <section>
                     <div class="section-name">
                         <p>WORK EXPIRIENCE</p>
                     </div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem fuga sunt alias explicabo
-                        labore vitae quam, sequi, doloribus quod deserunt velit natus itaque tempore accusantium
-                        nesciunt asperiores tenetur libero? Repellat?</p>
+                    <section class="institution-block">
+                        <h3>ENTER A JOB TITLE HERE</h3>
+                        <p>Some Company / Software Developer / since 2022</p>
+                        <br>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem fuga sunt alias explicabo
+                            labore vitae quam, sequi, doloribus quod deserunt velit natus itaque tempore accusantium
+                            nesciunt asperiores tenetur libero? Repellat?</p>
+                        <ul>
+                            <li><span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem fuga sunt
+                                    alias
+                                    explicabo</span></li>
+                            <li><span>vitae quam, sequi, doloribus quod deserunt velit natus itaque tempore accusantium
+                                    nesciunt asperiores tenetur libero? Repellat?</span></li>
+                        </ul>
+                    </section>
+                    <section class="institution-block">
+                        <h3>ENTER A JOB TITLE HERE</h3>
+                        <p>Some Company / Software Developer / since 2022</p>
+                        <br>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem fuga sunt alias explicabo
+                            labore vitae quam, sequi, doloribus quod deserunt velit natus itaque tempore accusantium
+                            nesciunt asperiores tenetur libero? Repellat?</p>
+                        <ul>
+                            <li><span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem fuga sunt
+                                    alias
+                                    explicabo</span></li>
+                            <li><span>vitae quam, sequi, doloribus quod deserunt velit natus itaque tempore accusantium
+                                    nesciunt asperiores tenetur libero? Repellat?</span></li>
+                        </ul>
+                    </section>
                 </section>
+
+                <!-- == work exprience section == -->
+
             </section>
+
+            <!-- == right side == -->
+
         </section>
+
+        <!-- == content == -->
+
         <div class="gradient-box-end"></div>
+
     </main>
 </body>
 
