--- a/index.html
+++ b/index.html
@@ -39,19 +39,17 @@
 
                 <!-- -- contact section -- -->
 
-                <section class="contact-section">
+                <section class="contact-section" id="greater-top-margin">
                     <div class="section-name">
                         <p>CONTACT</p>
                     </div>
                     <p>
                         <a href="tel: +380684834663" target="_blank">+38 068-483-46-63</a>
-                        <a href="tel: +380684834663" target="_blank"><img src="/imgs/phone_icon.png"
-                                alt="Phone Icon"></a>
+                        <a href="tel: +380684834663" target="_blank"><img src="/imgs/phone_icon.png" alt="Phone Icon"></a>
                     </p>
                     <p>
                         <a href="mailto: vasylyi2004@gmail.com" target="_blank">vasylyi2004@gmail.com</a>
-                        <a href="mailto: vasylyi2004@gmail.com" target="_blank"><img src="/imgs/mail_icon.png"
-                                alt="Mail Icon"></a>
+                        <a href="mailto: vasylyi2004@gmail.com" target="_blank"><img src="/imgs/mail_icon.png" alt="Mail Icon"></a>
                     </p>
                     <p>
                         <a href="https://goo.gl/maps/DtZ7JXfggpDNZwX17" target="_blank">Martina-Shymanovskogo<br>Kryvyi
@@ -61,8 +59,7 @@
                     </p>
                     <p>
                         <a href="https://www.instagram.com/vasyagladush/" target="_blank">@vasyagladush</a>
-                        <a href="https://www.instagram.com/vasyagladush/" target="_blank"><img
-                                src="/imgs/instagram_icon.png" alt="Instagram Icon"></a>
+                        <a href="https://www.instagram.com/vasyagladush/" target="_blank"><img src="/imgs/instagram_icon.png" alt="Instagram Icon"></a>
                     </p>
                 </section>
 
@@ -75,13 +72,7 @@
                         <p>EDUCATION</p>
                     </div>
                     <section class="institution-block">
-                        <h3>COMPUTER SCIENCE</h3>
-                        <p>Kryvyi Rih National University</p>
-                        <p>Kriviy Rih, Ukraine</p>
-                        <p>since 2021</p>
-                    </section>
-                    <section class="institution-block">
-                        <h3>SOFTWARE ENGINEERING</h3>
+                        <h3>AUTOMATION AND COMPUTER-INTEGRATED TECHNOLOGIES</h3>
                         <p>Kryvyi Rih National University</p>
                         <p>Kriviy Rih, Ukraine</p>
                         <p>since 2021</p>
@@ -92,7 +83,7 @@
 
                 <!-- -- skills section -- -->
 
-                <section class="skills-section">
+                <section class="skills-section" id="greater-top-margin">
                     <div class="section-name">
                         <p>SKILLS</p>
                     </div>
@@ -116,9 +107,9 @@
                     <div class="section-name">
                         <p>PROFESSIONAL PROFILE</p>
                     </div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem fuga sunt alias explicabo
-                        labore vitae quam, sequi, doloribus quod deserunt velit natus itaque tempore accusantium
-                        nesciunt asperiores tenetur libero? Repellat?</p>
+                    <p>Having recently graduated from the University of London with a 2:1 degree in marketing, I have completed several internships within the retail and fashion industries. I developed a keen eye for detail whilst assisting in the production
+                        of global marketing campaigns. I excel in digital design and have received three student awards for my work since beginning freelance projects in 2014.
+                    </p>
                 </section>
 
                 <!-- == professional profile section == -->
@@ -133,24 +124,7 @@
                         <h3>ENTER A JOB TITLE HERE</h3>
                         <p>Some Company / Software Developer / since 2022</p>
                         <br>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem fuga sunt alias explicabo
-                            labore vitae quam, sequi, doloribus quod deserunt velit natus itaque tempore accusantium
-                            nesciunt asperiores tenetur libero? Repellat?</p>
-                        <ul>
-                            <li><span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem fuga sunt
-                                    alias
-                                    explicabo</span></li>
-                            <li><span>vitae quam, sequi, doloribus quod deserunt velit natus itaque tempore accusantium
-                                    nesciunt asperiores tenetur libero? Repellat?</span></li>
-                        </ul>
-                    </section>
-                    <section class="institution-block">
-                        <h3>ENTER A JOB TITLE HERE</h3>
-                        <p>Some Company / Software Developer / since 2022</p>
-                        <br>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem fuga sunt alias explicabo
-                            labore vitae quam, sequi, doloribus quod deserunt velit natus itaque tempore accusantium
-                            nesciunt asperiores tenetur libero? Repellat?</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem fuga sunt alias explicabo labore vitae quam, sequi, doloribus quod deserunt velit natus itaque tempore accusantium nesciunt asperiores tenetur libero? Repellat?</p>
                         <ul>
                             <li><span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem fuga sunt
                                     alias
