--- a/index.html
+++ b/index.html
@@ -45,21 +45,21 @@
                     </div>
                     <p>
                         <a href="tel: +380684834663" target="_blank">+38 068-483-46-63</a>
-                        <a href="tel: +380684834663" target="_blank"><img src="/imgs/phone_icon.png" alt="Phone Icon"></a>
+                        <a href="tel: +380684834663" target="_blank"><img src="imgs/phone_icon.png" alt="Phone Icon"></a>
                     </p>
                     <p>
                         <a href="mailto: vasylyi2004@gmail.com" target="_blank">vasylyi2004@gmail.com</a>
-                        <a href="mailto: vasylyi2004@gmail.com" target="_blank"><img src="/imgs/mail_icon.png" alt="Mail Icon"></a>
+                        <a href="mailto: vasylyi2004@gmail.com" target="_blank"><img src="imgs/mail_icon.png" alt="Mail Icon"></a>
                     </p>
                     <p>
                         <a href="https://goo.gl/maps/DtZ7JXfggpDNZwX17" target="_blank">Martina-Shymanovskogo<br>Kryvyi
                             Rih, Ukraine</a>
                         <a href="https://goo.gl/maps/DtZ7JXfggpDNZwX17" target="_blank">
-                            <img id="two-lines-icon" src="/imgs/location_icon.png" alt="Location Icon"></a>
+                            <img id="two-lines-icon" src="imgs/location_icon.png" alt="Location Icon"></a>
                     </p>
                     <p>
                         <a href="https://www.instagram.com/vasyagladush/" target="_blank">@vasyagladush</a>
-                        <a href="https://www.instagram.com/vasyagladush/" target="_blank"><img src="/imgs/instagram_icon.png" alt="Instagram Icon"></a>
+                        <a href="https://www.instagram.com/vasyagladush/" target="_blank"><img src="imgs/instagram_icon.png" alt="Instagram Icon"></a>
                     </p>
                 </section>
 
