Responsive layout added

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="lib/css/reset.css">
     <link rel="stylesheet" href="lib/css/styles.css">
-    <title>Document</title>
+    <title>Vasya Gladush</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Lora&display=swap');
     </style>
@@ -39,7 +39,7 @@
 
                 <!-- -- contact section -- -->
 
-                <section class="contact-section" id="greater-top-margin">
+                <section class="contact-section">
                     <div class="section-name">
                         <p>CONTACT</p>
                     </div>
@@ -55,7 +55,7 @@
                         <a href="https://goo.gl/maps/DtZ7JXfggpDNZwX17" target="_blank">Martina-Shymanovskogo<br>Kryvyi
                             Rih, Ukraine</a>
                         <a href="https://goo.gl/maps/DtZ7JXfggpDNZwX17" target="_blank">
-                            <img id="two-lines-icon" src="imgs/location_icon.png" alt="Location Icon"></a>
+                            <img class="two-lines-icon" src="imgs/location_icon.png" alt="Location Icon"></a>
                     </p>
                     <p>
                         <a href="https://www.instagram.com/vasyagladush/" target="_blank">@vasyagladush</a>
@@ -83,7 +83,7 @@
 
                 <!-- -- skills section -- -->
 
-                <section class="skills-section" id="greater-top-margin">
+                <section class="skills-section">
                     <div class="section-name">
                         <p>SKILLS</p>
                     </div>
