Changed some  margins

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
                 <!-- -- contact section -- -->
 
-                <section class="contact-section">
+                <section class="contact-section" id="greater-p-top-margin">
                     <div class="section-name">
                         <p>CONTACT</p>
                     </div>
@@ -83,7 +83,7 @@
 
                 <!-- -- skills section -- -->
 
-                <section class="skills-section">
+                <section class="skills-section" id="greater-p-top-margin">
                     <div class="section-name">
                         <p>SKILLS</p>
                     </div>
