--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <!-- -- header -- -->
 
         <header>
-            <h1>VASILIY GLADUSH</h1>
+            <h1>VASYL HLADUSH</h1>
             <h3>SOFTWARE DEVELOPER</h3>
         </header>
 
@@ -44,22 +44,20 @@
                         <p>CONTACT</p>
                     </div>
                     <p>
-                        <a href="tel: +380684834663" target="_blank">+38 068-483-46-63</a>
-                        <a href="tel: +380684834663" target="_blank"><img src="imgs/phone_icon.png" alt="Phone Icon"></a>
+                        <a href="tel: +48508640036" target="_blank">+48 508-640-036</a>
+                        <a href="tel: +48508640036" target="_blank"><img src="imgs/phone_icon.png" alt="Phone Icon"></a>
                     </p>
                     <p>
                         <a href="mailto: vasylyi2004@gmail.com" target="_blank">vasylyi2004@gmail.com</a>
                         <a href="mailto: vasylyi2004@gmail.com" target="_blank"><img src="imgs/mail_icon.png" alt="Mail Icon"></a>
                     </p>
                     <p>
-                        <a href="https://goo.gl/maps/DtZ7JXfggpDNZwX17" target="_blank">Martina-Shymanovskogo<br>Kryvyi
-                            Rih, Ukraine</a>
-                        <a href="https://goo.gl/maps/DtZ7JXfggpDNZwX17" target="_blank">
-                            <img class="two-lines-icon" src="imgs/location_icon.png" alt="Location Icon"></a>
+                        <a href="https://goo.gl/maps/V8ZYJMLsPFeFbaDd9" target="_blank">Kraków, Poland</a>
+                        <a href="https://goo.gl/maps/V8ZYJMLsPFeFbaDd9" target="_blank"><img src="imgs/location_icon.png" alt="Location Icon"></a>
                     </p>
                     <p>
-                        <a href="https://www.instagram.com/vasyagladush/" target="_blank">@vasyagladush</a>
-                        <a href="https://www.instagram.com/vasyagladush/" target="_blank"><img src="imgs/instagram_icon.png" alt="Instagram Icon"></a>
+                        <a href="https://github.com/vasyagladush" target="_blank">vasyagladush</a>
+                        <a href="https://github.com/vasyagladush" target="_blank"><img src="imgs/github_icon.png" alt="Instagram Icon"></a>
                     </p>
                 </section>
 
@@ -75,7 +73,7 @@
                         <h3>AUTOMATION AND COMPUTER-INTEGRATED TECHNOLOGIES</h3>
                         <p>Kryvyi Rih National University</p>
                         <p>Kriviy Rih, Ukraine</p>
-                        <p>since 2021</p>
+                        <p>since September 2021</p>
                     </section>
                 </section>
 
@@ -88,7 +86,8 @@
                         <p>SKILLS</p>
                     </div>
                     <p>Fast Learning</p>
-                    <p>Working Independently</p>
+                    <p>Highly Engaged</p>
+                    <p>Collaborative</p>
                 </section>
 
                 <!-- == skills section == -->
@@ -107,8 +106,8 @@
                     <div class="section-name">
                         <p>PROFESSIONAL PROFILE</p>
                     </div>
-                    <p>Having recently graduated from the University of London with a 2:1 degree in marketing, I have completed several internships within the retail and fashion industries. I developed a keen eye for detail whilst assisting in the production
-                        of global marketing campaigns. I excel in digital design and have received three student awards for my work since beginning freelance projects in 2014.
+                    <p>Started programming adventure from C++, HTML and CSS while studying at school. Later I entered Ukranian Kryvyi Rih National University and then also started working as a Backend Software Developer at a company building solutions for
+                        Open Banking payments initiation and data providing. Now I have an intention to transfer to AGH University in Poland, Kraków to Teleinformatics specialty.
                     </p>
                 </section>
 
@@ -121,16 +120,15 @@
                         <p>WORK EXPIRIENCE</p>
                     </div>
                     <section class="institution-block">
-                        <h3>ENTER A JOB TITLE HERE</h3>
-                        <p>Some Company / Software Developer / since 2022</p>
+                        <h3>Backend Software Developer</h3>
+                        <p><a href="https://www.fena.co" target="_blank">Fena</a> / Software Developer / since February, 2022</p>
                         <br>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem fuga sunt alias explicabo labore vitae quam, sequi, doloribus quod deserunt velit natus itaque tempore accusantium nesciunt asperiores tenetur libero? Repellat?</p>
+                        <p>This company serves businesses by building solutions for Open Banking payments initiation and data providing. In February 2022 got an internship as Intern Backend Software Developer in the company with following hiring as Backend
+                            Software Developer.
+                        </p>
                         <ul>
-                            <li><span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem fuga sunt
-                                    alias
-                                    explicabo</span></li>
-                            <li><span>vitae quam, sequi, doloribus quod deserunt velit natus itaque tempore accusantium
-                                    nesciunt asperiores tenetur libero? Repellat?</span></li>
+                            <li><span>Worked with TypeScript, ExpressJS, MongoDB on the backend;</span></li>
+                            <li><span>Integrated with OpenBanking and PSD2 systems: open APIs that enable third-party developers to build applications and services around the financial institution. Got knowledge of using OAuth, Transport(TLS/SSL) and Signing certificates.</span></li>
                         </ul>
                     </section>
                 </section>
@@ -145,7 +143,7 @@
 
         <!-- == content == -->
 
-        <div class="gradient-box-end"></div>
+        <div class="gradient-box-bottom"></div>
 
     </main>
 </body>
