Hotfix: remove coma

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                     </div>
                     <section class="institution-block">
                         <h3>Backend Software Developer</h3>
-                        <p><a href="https://www.fena.co" target="_blank">Fena</a> / Software Developer / since February, 2022</p>
+                        <p><a href="https://www.fena.co" target="_blank">Fena</a> / Software Developer / since February 2022</p>
                         <br>
                         <p>This company serves businesses by building solutions for Open Banking payments initiation and data providing. In February 2022 got an internship as Intern Backend Software Developer in the company with following hiring as Backend
                             Software Developer.
