--- a/index.html
+++ b/index.html
@@ -85,9 +85,14 @@
                     <div class="section-name">
                         <p>SKILLS</p>
                     </div>
+                    <p>Manage to Work Under Pressure and During Unconventional Situations</p>
+                    <p>Work prioritizing and planning</p>
+                    <p>High Communication and Social Skills</p>
                     <p>Fast Learning</p>
                     <p>Highly Engaged</p>
                     <p>Collaborative</p>
+                    <p>Result Oriented</p>
+                    <p>Flexible</p>
                 </section>
 
                 <!-- == skills section == -->
