--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                         <p>PROFESSIONAL PROFILE</p>
                     </div>
                     <p>Started programming adventure from C++, HTML and CSS while studying at school. Later I entered Ukranian Kryvyi Rih National University and then also started working as a Backend Software Developer at a company building solutions for
-                        Open Banking payments initiation and data providing. Now I have an intention to transfer to AGH University in Poland, Kraków to Teleinformatics specialty.
+                        Open Banking payments initiation and data providing. Now I have an intention to transfer to AGH University in Poland, Kraków to Teleinformatics specialty to Faculty of Computer Science, Electronics and Telecommunications.
                     </p>
                 </section>
 
