Hotfix: line-height

--- a/index.html
+++ b/index.html
@@ -128,11 +128,11 @@
                         <h3>Backend Software Developer</h3>
                         <p><a href="https://www.fena.co" target="_blank">Fena</a> / Software Developer / since February 2022</p>
                         <br>
-                        <p>This company serves businesses by building solutions for Open Banking payments initiation and data providing. In February 2022 got an internship as Intern Backend Software Developer in the company with following hiring as Backend
-                            Software Developer.
+                        <p>This company serves businesses by building solutions for Open Banking payments initiation and data providing. In February 2022 got an internship as an Intern Backend Software Developer in the company with following hiring as a
+                            Backend Software Developer.
                         </p>
                         <ul>
-                            <li><span>Worked with TypeScript, ExpressJS, MongoDB on the backend;</span></li>
+                            <li><span>Worked with TypeScript, ExpressJS, MongoDB on the backend. Created Swagger specifications;</span></li>
                             <li><span>Integrated with OpenBanking and PSD2 systems: open APIs that enable third-party developers to build applications and services around the financial institution. Got knowledge of using OAuth, Transport(TLS/SSL) and Signing certificates.</span></li>
                         </ul>
                     </section>
