--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
                     </div>
                     <p>Manage to Work Under Pressure and During Unconventional Situations</p>
                     <p>Work prioritizing and planning</p>
+                    <p>Highly Engaged, especially in innovative products</p>
                     <p>High Communication and Social Skills</p>
                     <p>Fast Learning</p>
-                    <p>Highly Engaged</p>
                     <p>Collaborative</p>
                     <p>Result Oriented</p>
                     <p>Flexible</p>
@@ -111,8 +111,9 @@
                     <div class="section-name">
                         <p>PROFESSIONAL PROFILE</p>
                     </div>
-                    <p>Started programming adventure from C++, HTML and CSS while studying at school. Later I entered Ukranian Kryvyi Rih National University and then also started working as a Backend Software Developer at a company building solutions for
-                        Open Banking payments initiation and data providing. Now I have an intention to transfer to AGH University in Poland, Kraków to Teleinformatics specialty to Faculty of Computer Science, Electronics and Telecommunications.
+                    <p>Started programming adventure from C++, HTML and CSS while studying at school. Also I attended STEP IT Academy for 2 years where I learned more about Computer Networks, Cybersecurity and C++ and got 3 Cisco Networking Academy certificates.
+                        Later I entered Ukranian Kryvyi Rih National University and then I also started working as a Backend Software Developer at a British company building solutions for Open Banking payments initiation and data providing. Now I have
+                        an intention to transfer to AGH University in Kraków, Poland to Teleinformatics specialty to Faculty of Computer Science, Electronics and Telecommunications.
                     </p>
                 </section>
 
@@ -128,12 +129,28 @@
                         <h3>Backend Software Developer</h3>
                         <p><a href="https://www.fena.co" target="_blank">Fena</a> / Software Developer / since February 2022</p>
                         <br>
-                        <p>This company serves businesses by building solutions for Open Banking payments initiation and data providing. In February 2022 got an internship as an Intern Backend Software Developer in the company with following hiring as a
-                            Backend Software Developer.
+                        <p>This company serves businesses by building solutions for Open Banking payments initiation and data providing. In February 2022 I got an internship as an Intern Backend Software Developer in the company with a following hiring as
+                            a Backend Software Developer.
                         </p>
                         <ul>
                             <li><span>Worked with TypeScript, ExpressJS, MongoDB on the backend. Created Swagger specifications;</span></li>
-                            <li><span>Integrated with OpenBanking and PSD2 systems: open APIs that enable third-party developers to build applications and services around the financial institution. Got knowledge of using OAuth, Transport(TLS/SSL) and Signing certificates.</span></li>
+                            <li><span>Integrated with OpenBanking and PSD2 systems: open APIs that enable third-party developers to build applications and services around the financial institution. Got knowledge of using OAuth, Transport(TLS/SSL) and Signing Certificates.</span></li>
+                        </ul>
+                    </section>
+                </section>
+
+                <section>
+                    <div class="section-name">
+                        <p>ADDITIONAL EDUCATION</p>
+                    </div>
+                    <section class="institution-block">
+                        <h3>STEP IT Academy</h3>
+                        <p><a href="https://itstep.org/en" target="_blank">STEP IT Academy</a> / Software Development, Cybersecurity, Computer Networks / 2019-2021</p>
+                        <br>
+                        <p>International IT Academy that has branches in 19 countries. Studied Computer Networks, Cybersecurity, C/C++ programming.
+                        </p>
+                        <ul>
+                            <li><span>Got CISCO Networking Academy certificates: Cybersecurity Essentials, Cybersecurity Basics, IT Essentials;</span></li>
                         </ul>
                     </section>
                 </section>
