--- a/index.html
+++ b/index.html
@@ -43,21 +43,22 @@
                     <div class="section-name">
                         <p>CONTACT</p>
                     </div>
+                    <img src="imgs/profile.jpg" class="profile-picture" alt="Profile Picture">
                     <p>
                         <a href="tel: +48508640036" target="_blank">+48 508-640-036</a>
-                        <a href="tel: +48508640036" target="_blank"><img src="imgs/phone_icon.png" alt="Phone Icon"></a>
+                        <a href="tel: +48508640036" target="_blank"><img src="imgs/phone-icon.png" alt="Phone Icon"></a>
                     </p>
                     <p>
                         <a href="mailto: vasylyi2004@gmail.com" target="_blank">vasylyi2004@gmail.com</a>
-                        <a href="mailto: vasylyi2004@gmail.com" target="_blank"><img src="imgs/mail_icon.png" alt="Mail Icon"></a>
+                        <a href="mailto: vasylyi2004@gmail.com" target="_blank"><img src="imgs/mail-icon.png" alt="Mail Icon"></a>
                     </p>
                     <p>
                         <a href="https://goo.gl/maps/V8ZYJMLsPFeFbaDd9" target="_blank">Kraków, Poland</a>
-                        <a href="https://goo.gl/maps/V8ZYJMLsPFeFbaDd9" target="_blank"><img src="imgs/location_icon.png" alt="Location Icon"></a>
+                        <a href="https://goo.gl/maps/V8ZYJMLsPFeFbaDd9" target="_blank"><img src="imgs/location-icon.png" alt="Location Icon"></a>
                     </p>
                     <p>
                         <a href="https://github.com/vasyagladush" target="_blank">vasyagladush</a>
-                        <a href="https://github.com/vasyagladush" target="_blank"><img src="imgs/github_icon.png" alt="Instagram Icon"></a>
+                        <a href="https://github.com/vasyagladush" target="_blank"><img src="imgs/github-icon.png" alt="Instagram Icon"></a>
                     </p>
                 </section>
 
@@ -71,6 +72,7 @@
                     </div>
                     <section class="institution-block">
                         <h3>AUTOMATION AND COMPUTER-INTEGRATED TECHNOLOGIES</h3>
+                        <p>Bachelor</p>
                         <p>Kryvyi Rih National University</p>
                         <p>Kriviy Rih, Ukraine</p>
                         <p>since September 2021</p>
@@ -111,10 +113,12 @@
                     <div class="section-name">
                         <p>PROFESSIONAL PROFILE</p>
                     </div>
-                    <p>Started programming adventure from C++, HTML and CSS while studying at school. Also I attended STEP IT Academy for 2 years where I learned more about Computer Networks, Cybersecurity and C++ and got 3 Cisco Networking Academy certificates.
-                        Later I entered Ukranian Kryvyi Rih National University and then I also started working as a Backend Software Developer at a British company building solutions for Open Banking payments initiation and data providing. Now I have
-                        an intention to transfer to AGH University in Kraków, Poland to Teleinformatics specialty to Faculty of Computer Science, Electronics and Telecommunications.
-                    </p>
+
+                    <div class="wrapper">
+                        <p style="text-indent: 1em;">Started programming adventure from C++, HTML and CSS while studying at school. Also I attended STEP IT Academy for 2 years where I learned more about Computer Networks, Cybersecurity and C++ and got 3 Cisco Networking Academy certificates.</p>
+                        <p style="text-indent: 1em;">Later I entered Ukranian Kryvyi Rih National University and then I also started working as a Backend Software Developer at a British company building solutions for Open Banking payments initiation and data providing.</p>
+                        <p style="text-indent: 1em;">Now I have an intention to transfer to AGH University in Kraków, Poland to Teleinformatics specialty to Faculty of Computer Science, Electronics and Telecommunications.</p>
+                    </div>
                 </section>
 
                 <!-- == professional profile section == -->
@@ -133,8 +137,8 @@
                             a Backend Software Developer.
                         </p>
                         <ul>
-                            <li><span>Worked with TypeScript, ExpressJS, MongoDB on the backend. Created Swagger specifications;</span></li>
-                            <li><span>Integrated with OpenBanking and PSD2 systems: open APIs that enable third-party developers to build applications and services around the financial institution. Got knowledge of using OAuth, Transport(TLS/SSL) and Signing Certificates.</span></li>
+                            <li><span>Worked with TypeScript, NodeJS, ExpressJS, MongoDB and PostgreSQL with TypeOrm on the backend. Created Swagger specifications</span></li>
+                            <li><span>Integrated with OpenBanking and PSD2 systems: open APIs that enable third-party developers to build applications and services around the financial institution. Got knowledge of using OAuth, Transport(TLS/SSL) and Signing Certificates</span></li>
                         </ul>
                     </section>
                 </section>
@@ -150,7 +154,10 @@
                         <p>International IT Academy that has branches in 19 countries. Studied Computer Networks, Cybersecurity, C/C++ programming.
                         </p>
                         <ul>
-                            <li><span>Got CISCO Networking Academy certificates: Cybersecurity Essentials, Cybersecurity Basics, IT Essentials;</span></li>
+                            <li><span>Got Cisco Networking Academy certificates: Cybersecurity Essentials, Cybersecurity Basics, IT Essentials
+                                <br>
+                                Attachment: <a href="cisco-certificates.pdf">Cisco Networking Academy Certificates</a>
+                            </span></li>
                         </ul>
                     </section>
                 </section>
